--- a/department-management/src/main/resources/application.yml
+++ b/department-management/src/main/resources/application.yml
@@ -9,3 +9,9 @@ eureka:
   client:
     service-url:
       default-zone: http://localhost:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
