--- a/employment-management/src/main/resources/application.yml
+++ b/employment-management/src/main/resources/application.yml
@@ -4,3 +4,14 @@ server:
 spring:
   application:
     name: employment-management
+
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
