--- a/service-management/pom.xml
+++ b/service-management/pom.xml
@@ -37,6 +37,11 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
+    <dependency>
+      <groupId>de.codecentric</groupId>
+      <artifactId>spring-boot-admin-starter-server</artifactId>
+      <version>2.1.1</version>
+    </dependency>
   </dependencies>
 
   <build>
